# keynote-parser

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
dumper/: Makefile  extract_mapping.py  generate_mapping.py  protodump.py  rename_proto_files.py  rewrite_imports.py  run.py
dumper/proto-dump/: Makefile  README.md
dumper/proto-dump/ProtoDumpUnitTests/: ProtoDumpUnitTests.m
dumper/proto-dump/ProtoDumpUnitTests/addressbook/: addressbook.input  addressbook.proto
dumper/proto-dump/proto-dump/: PDDependencyProcessor.h  PDDependencyProcessor.m  PDProtoFile+Private.h  PDProtoFile.h  PDProtoFile.mm  PDProtoFileExtractor.h  PDProtoFileExtractor.m  PDProtobufInputStream.h  PDProtobufInputStream.mm  main.m
dumper/proto-dump/proto-dump.xcodeproj/: project.pbxproj
dumper/unsign/: .gitignore  Makefile  README.md
keynote_parser/: __init__.py  bundle_utils.py  codec.py  command_line.py  file_utils.py  macos_app_version.py  mapping.py  replacement.py  unicode_utils.py
keynote_parser/versions/: __init__.py
keynote_parser/versions/v14_4/: __init__.py  mapping.py
protos/: KNArchives.proto  KNArchives_sos.proto  KNCommandArchives.proto  KNCommandArchives_sos.proto  TSAArchives.proto  TSCEArchives.proto  TSCHArchives.proto  TSCHArchives_Common.proto  TSDArchives.proto  TSKArchives.proto  TSPArchiveMessages.proto  TSPMessages.proto  TSSArchives.proto  TSTArchives.proto  TSWPArchives.proto  TSWPArchives_sos.proto  TSWPCommandArchives.proto
protos/versions/14.4/: KNArchives.proto  KNArchives_sos.proto  KNCommandArchives.proto  TSDArchives.proto
tests/: test_bundle_utils.py  test_codec.py  test_file_utils.py  test_replacement.py  test_unicode_utils.py
(+2 files in other folders)
